--- a/uk/index.html
+++ b/uk/index.html
@@ -94,7 +94,7 @@
             <div style="padding-left: 30px;">
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
                 <p>FaceBook: <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
-                <p>Instagram: <a href="https://www.instagram.com/alisa.solutions/" target="\_blank" title="Instagram Profile">alisa.solutions</a></p>
+                <p>Instagram: <a href="https://www.instagram.com/alisa.polymath/" target="\_blank" title="Instagram Profile">alisa.polymath</a></p>
                 <p>Telegram: <a href="https://t.me/dance_fight" target="\_blank" title="Telegram Public">dance_fight</a></p>
             </div>   
         </section>  
