--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Together with my friends we
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
                 <p>FaceBook: <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
                 <p>Instagram: <a href="https://www.instagram.com/alisa.polymath/" target="\_blank" title="Instagram Profile">alisa.polymath</a></p>
-                <p>Telegram: <a href="https://t.me/lissenx" target="\_blank" title="Telegram Public">dance_fight</a></p>
+                <p>Telegram: <a href="https://t.me/lissenx" target="\_blank" title="Telegram Public">Alisa special agent fairy</a></p>
             </div>
 
         </section>
