--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides educational guidance & emotional support for individuals & families seeking somewhat balance in their lives.</p>
+            <p class="maintext">provides educational guidance & emotional support to individuals & families seeking somewhat balance in their lives.</p>
             <div class="maintext_comment">
                 <p>She gently reminds people of inner peace & beauty in times of outer chaos & turmoil. Asks deep questions. Provides structure to families & businesses.</p>
                 <p>Being a professional heuristic pedagogue, Alisa shows people the power of imagination, intuition, inventive spirit, playfulness and last but not least - system thinking. She's a polymath and a creative nerd and loves to melt hearts with humour and warmth. She makes people sense and understand their emotions better, sparks kindness and smart fun. She has several courses on the subjects like expression, openness, the art of Choice, saying No, genuine humbleness, intuition and care, gentle joy and more.</p>
