--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
     </section>
 
     <section id="header" class="bg">
-        <h2>SOFT SKILLS trully MATTER</h2>
+        <h2>SOFT SKILLS FOR LIFE AND ORGANISATIONAL CULTURE</h2>
     </section>
 
     <section id="about" class="bg">
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides educational guidance & emotional support to individuals & families seeking somewhat balance in their lives.</p>
+            <p class="maintext">provides educational guidance & emotional support to enterpreneurs & families seeking somewhat balance in their lives.</p>
             <div class="maintext_comment">
-                <p>She gently reminds people of inner peace & beauty in times of outer chaos & turmoil. Asks deep questions. Provides structure to families & businesses.</p>
-                <p>Being a professional heuristic pedagogue, Alisa shows people the power of imagination, intuition, inventive spirit, playfulness and last but not least - system thinking. She's a polymath and a creative nerd and loves to melt hearts with humour and warmth. She makes people sense and understand their emotions better, sparks kindness and smart fun. She has several courses on the subjects like expression, openness, the art of Choice, saying No, genuine humbleness, intuition and care, gentle joy and more.</p>
+                <p>She reminds people of their inner beauty in times of outer chaos & turmoil. Asks deep questions. Provides structure.</p>
+                <p>Being a professional heuristic pedagogue, Alisa awakens people to the power of their own imagination, intuition, playfulness and last but not least - SYSTEMS THINKING. She is a true polymathic teacher, coach & creative nerd and loves to melt hearts with humour. She makes people sense and understand their emotions better, sparks kindness and smart fun. Sbjects like expression, openness, art of Choice, saying No, genuine humbleness, intuition and care, gentle joy and more are the subjects she prefers to write about.</p>
             </div>
             <div>
-                <p class="maintext_narrow">She invests a lot of time into organisation of innovative educational spaces with a mission "to inspire action towards Knowing Oneself". Her main audience is mothers and children seeking harmony, understanding, calm, self reliance and growth.</p>
+                <p class="maintext_narrow">She invests a lot of time into organisation of innovative educational spaces with a mission "to inspire action towards Knowing Oneself". Her main audience are people seeking understanding, self reliance, calm and growth.</p>
             </div>
             <div class="maintext_comment">
-                <p class="maintext">Now, listen out:
+                <p class="maintext">Now, listen:
 I invite you to explore your core values with me!</p>
-                <p>Need a calming session to
-- sort out your insecurities & anxiety?
-- get a kick of motivation for inspired action?
-- receive help with rebuilding self-trust & self-respect?
-Or a deeply simple talk with someone who listens with care & dedication, curiosity and helps you follow your personal interest?</p>
+                <p>Do you need a calming session to:
+- deal with insecurities & social anxiety?
+- get a kick of motivation to finally start what's been postponed for so long?
+- receive help with rebuilding self-trust & self-respect after a hard break-up, divorce, burn-out, deep depression or loss?
+Or a simple talk with someone who listens with dedication, curiosity and helps YOU FOLLOW YOUR OWN INTEREST aside from a multitude of distractions?</p>
                 <p>Just imagine...
-you experience ease & bliss in your personal life and professional realisation on a daily basis.
+you experience blissful ease in your personal life and professional realisation on a daily basis.
 How do you feel?
-... you have released yourself from well known cages of clichés & started loving, truly...</p>
+... you have released yourself from well known cages and clichés & have started loving, truly...</p>
             </div>
         </div>
         <div class="column_photo_tall">
@@ -54,20 +54,23 @@ How do you feel?
         
     </div>
     <div class="end_text">
-        <p class="maintext">Join my courses
-- to meet & learn
-- practise authentic courage
+        <p class="maintext">Join my personal and group courses
+- to meet & learn about your impulsis, emotions, dreams, desires, talents & skills
+- practise authentic courage to express feelings in a tactful and congruent way
 - train emotional intelligence & body awareness
-- express freely & playfully
-- discover your personal style of making decisions
+- explore playfulness
+- discover personal style of making decisions, rhythm of self-care
 - learn ABCs of managing time, energy, effort & discipline, patience, culture, kindness & inspiration!
 
-It's a WoW Package!
+It's A WOW PACKAGE! Whether you take it as a course of 16 sessions or have a unique brainstorming class with me, you win in any case!
 
-Together with my friends we
-1) found solutions to diverse challenges & reached wellbeing,
-2) gained clear visions
-3) integrated empathy as a strategic tool for personal & team success!
+Together with can
+1) fing solutions to diverse challenges & reach long-awaited wellbeing
+2) gain clear and resonating direction
+3) integrate empathy as a tool
+4) develop strategic vision for personal success
+5) mindfully communicate needs and values to stop fighting where it is avoidable and rather connect on a mutually respectful level.
+            Reach out and book a primary call if you wanna collaborate!
 
 #Education
 #psychotherapy
