--- a/index.html
+++ b/index.html
@@ -35,18 +35,6 @@
                 <p class="maintext_narrow">She invests a lot of time into organisation of innovative educational spaces with a mission "to inspire action towards Knowing Oneself". Her main audience are people seeking understanding, self reliance, calm and growth.</p>
             </div>
             <div class="maintext_comment">
-                <p class="maintext">Now, listen:
-I invite you to explore your core values with me!</p>
-                <p>Do you need a calming session to:
-- deal with insecurities & social anxiety?
-- get a kick of motivation to finally start what's been postponed for so long?
-- receive help with rebuilding self-trust & self-respect after a hard break-up, divorce, burn-out, deep depression or loss?
-Or a simple talk with someone who listens with dedication, curiosity and helps YOU FOLLOW YOUR OWN INTEREST aside from a multitude of distractions?</p>
-                <p>Just imagine...
-you experience blissful ease in your personal life and professional realisation on a daily basis.
-How do you feel?
-... you have released yourself from well known cages and clichés & have started loving, truly...</p>
-            </div>
         </div>
         <div class="column_photo_tall">
             <img width="485" src="img/920 perfect.png" alt="Alisa photo">
@@ -71,14 +59,6 @@ Together with can
 4) develop strategic vision for personal success
 5) mindfully communicate needs and values to stop fighting where it is avoidable and rather connect on a mutually respectful level.
             Reach out and book a primary call if you wanna collaborate!
-
-#Education
-#psychotherapy
-#coaching
-#media_production
-#individual_sessions
-#group_workshops
-#softskills for life, school and business</p>
     </div>     
         <section id="contacts" class="bg">
     
@@ -92,7 +72,7 @@ Together with can
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
                 <p>FaceBook: <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
                 <p>Instagram: <a href="https://www.instagram.com/alisa.polymath/" target="\_blank" title="Instagram Profile">alisa.polymath</a></p>
-                <p>Telegram: <a href="https://t.me/lissenx" target="\_blank" title="Telegram Public">Alisa special agent fairy</a></p>
+                <p>Telegram: <a href="https://t.me/lissenx" target="\_blank" title="Telegram Public">alisa special agent fairy</a></p>
             </div>
 
         </section>
