--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <p class="maintext">provides educational guidance & emotional support to enterpreneurs & families seeking somewhat balance in their lives.</p>
             <div class="maintext_comment">
                 <p>She reminds people of their inner beauty in times of outer chaos & turmoil. Asks deep questions. Provides structure.</p>
-                <p>Being a professional heuristic pedagogue, Alisa awakens people to the power of their own imagination, intuition, playfulness and last but not least - SYSTEMS THINKING. She is a true polymathic teacher, coach & creative nerd and loves to melt hearts with humour. She makes people sense and understand their emotions better, sparks kindness and smart fun. Sbjects like expression, openness, art of Choice, saying No, genuine humbleness, intuition and care, gentle joy and more are the subjects she prefers to write about.</p>
+                <p>Being a professional heuristic pedagogue, Alisa reminds people of their own imagination, intuition, playfulness and last but not least - motivates SYSTEMS THINKING. She is a true polymathic teacher, coach & creative nerd and loves to melt hearts with humour. She makes people sense and understand their emotions better, sparks kindness and smart fun. Themes and subjects like Creative Direction, Self Expression, Art of Choice, Saying No & Finding Rhythms of Gentle Joyous communication are the issues she prefers to speak & write about.</p>
             </div>
             <div>
-                <p class="maintext_narrow">She invests a lot of time into organisation of innovative educational spaces with a mission "to inspire action towards Knowing Oneself". Her main audience are people seeking understanding, self reliance, calm and growth.</p>
+                <p class="maintext_narrow">She invests a lot of time into her start-up: organising innovative educational spaces for mothers and children.</p>
             </div>
             <div class="maintext_comment">
             <h2>Schedule a meeting</h2>
