--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides educational guidance & emotional support to enterpreneurs & families seeking somewhat balance in their lives.</p>
+            <p class="maintext">provides educational guidance & emotional support to enterpreneurs & families seeking honesty & joy, inspiration, clarity & wisdom.</p>
             <div class="maintext_comment">
                 <p>She reminds people of their inner beauty in times of outer chaos & turmoil. Asks deep questions. Provides structure.</p>
                 <p>Being a professional heuristic pedagogue, Alisa reminds people of their own imagination, intuition, playfulness and last but not least - motivates SYSTEMS THINKING. She is a true polymathic teacher, coach & creative nerd and loves to melt hearts with humour. She makes people sense and understand their emotions better, sparks kindness and smart fun. Themes and subjects like Creative Direction, Self Expression, Art of Choice, Saying No & Finding Rhythms of Gentle Joyous communication are the issues she prefers to speak & write about.</p>
