--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p class="maintext">provides educational guidance & emotional support to enterpreneurs & families seeking honesty & joy, self forgiveness, inspiration, clarity & wisdom.</p>
             <div class="maintext_comment">
                 <p>She reminds people of their inner beauty in times of outer chaos & turmoil. Asks deep questions. Provides structure.</p>
-                <p>Being a professional heuristic pedagogue, Alisa reminds people of their own imagination, intuition, playfulness and last but not least - motivates SYSTEMS THINKING. She is a true polymathic teacher, coach & creative nerd and loves to melt hearts with humour. She makes people sense and understand their emotions better, sparks kindness and smart fun. Themes and subjects like Creative Direction, Self Expression, Art of Choice, Saying No & Finding Rhythms of Gentle Joyous communication are the issues she prefers to speak & write about.</p>
+                <p>Being a professional heuristic pedagogue, Alisa reminds people of their own imagination, intuition, playfulness and last but not least SYSTEMS THINKING. She is a true polymathic teacher, coach & creative nerd and loves to melt hearts with humour. She makes people sense and understand their emotions better, sparks kindness and smart fun. Themes and subjects like Creative Direction, Self Expression, Art of Choice, Saying No & Finding Rhythms of Gentle Joyous communication are the issues she prefers to speak & write about.</p>
             </div>
             <div>
                 <p class="maintext_narrow">She invests a lot of time into her start-up: organising innovative educational spaces for mothers and children.</p>
