--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides educational guidance & emotional support to enterpreneurs & families seeking honesty & joy, self forgiveness, inspiration, clarity & wisdom.</p>
+            <p class="maintext">provides educational guidance to enterpreneurs & families seeking calm joy, existential inspiration, self forgiveness, clarity and motivation to rebuild trust.</p>
             <div class="maintext_comment">
-                <p>She reminds people of their inner beauty in times of outer chaos & turmoil. Asks deep questions. Provides structure.</p>
-                <p>Being a professional heuristic pedagogue, Alisa reminds people of their own imagination, intuition, playfulness and last but not least SYSTEMS THINKING. She is a true polymathic teacher, coach & creative nerd and loves to melt hearts with humour. She makes people sense and understand their emotions better, sparks kindness and smart fun. Themes and subjects like Creative Direction, Self Expression, Art of Choice, Saying No & Finding Rhythms of Gentle Joyous communication are the issues she prefers to speak & write about.</p>
+                <p>She reminds people of their inner beauty in times of outer chaos & turmoil. Asks deep questions. Provides structure. Help teens overcome presentation and exam anxiety.</p>
+                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination & playfulness. She is a polymath & coach, a creative nerd who loves to melt hearts with humour. People of various ages sense and understand their emotions better, get more kind and enjoy smarter fun with her. Alisa loves Creative Direction & Systems Thinking. She is a naturally warm COMMUNITY MANAGER who loves to speak about subjects like Art of Choice & Saying No, Crisis Management & Conflict Resolution, Soft Skills & Honesty.</p>
             </div>
             <div>
-                <p class="maintext_narrow">She invests a lot of time into her start-up: organising innovative educational spaces for mothers and children.</p>
+                <p class="maintext_narrow">She invests a lot of time into her own Start-Up: organising innovative educational spaces for mothers and children. You can find more on that at smartfun.space. Connect with me to book a private BRAINSTORMING SESSION or a CREATIVE MASTERMIND if you seek fresh direction and resonate with me in one way or another.</p>
             </div>
             <div class="maintext_comment">
             <h2>Schedule a meeting</h2>
