--- a/index.html
+++ b/index.html
@@ -26,21 +26,20 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides educational guidance to enterpreneurs & families seeking calm joy, existential inspiration, self forgiveness, clarity and motivation to rebuild trust.</p>
+            <p class="maintext">provides educational guidance to enterpreneurs & families seeking calm, joy, inspiration, clarity and motivation to rebuild trust.</p>
             <div class="maintext_comment">
-                <p>She reminds people of their inner beauty in times of outer chaos & turmoil. Asks deep questions. Provides structure. Help teens overcome presentation and exam anxiety.</p>
-                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination & playfulness. She is a polymath & coach, a creative nerd who loves to melt hearts with humour. People of various ages sense and understand their emotions better, get more kind and enjoy smarter fun with her. Alisa loves Creative Direction & Systems Thinking. She is a naturally warm COMMUNITY MANAGER who loves to speak about subjects like Art of Choice & Saying No, Crisis Management & Conflict Resolution, Soft Skills & Honesty.</p>
+                <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Provides structure. Helps with presentation and exam anxiety.</p>
+                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination & playfulness. She is a polymath & a creative nerd who loves to melt hearts with humour. People sense and understand their emotions better after a talk with Alisa, get more kind and start enjoying smart & conscious ways of having fun. Alisa is a naturally warm COMMUNITY MANAGER who loves to speak about subjects like Systems Thinking, Art of Choice & Saying No, Crisis Management & Conflict Resolution, Soft Skills & Honesty and more.</p>
             </div>
             <div>
-                <p class="maintext_narrow">She invests a lot of time into her own Start-Up: organising innovative educational spaces for mothers and children. You can find more on that at smartfun.space. Connect with me to book a private BRAINSTORMING SESSION or a CREATIVE MASTERMIND if you seek fresh direction and resonate with me in one way or another.</p>
+                <p class="maintext_narrow">She invests a lot of time into her Start-Up: organising innovative educational spaces for mothers and children.</p>
             </div>
+            <p class="maintext">Connect & book a private BRAINSTORMING SESSION or a CREATIVE MASTERMIND if you seek fresh direction & inspiration.</p>
             <div class="maintext_comment">
-            <h2>Schedule a meeting</h2>
+            <div class="maintext_comment">
             <div style="padding: 2px 30px 7px;">
                 <p><a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a> (WhatsApp)</p>
             </div>
-
-            <h2>Connect</h2>
             <div style="padding-left: 30px;">
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
                 <p>FaceBook: <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
