--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             <p class="maintext">provides educational guidance to enterpreneurs & families seeking calm, joy, inspiration, clarity and motivation to rebuild trust.</p>
             <div class="maintext_comment">
                 <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Provides structure. Helps with presentation and exam anxiety.</p>
-                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination & playfulness. She is a polymath & a creative nerd who loves to melt hearts with humour. People sense and understand their emotions better after a talk with Alisa, get more kind and start enjoying smart & conscious ways of having fun. Alisa is a naturally warm COMMUNITY MANAGER who loves to speak about subjects like Systems Thinking, Art of Choice & Saying No, Crisis Management & Conflict Resolution, Soft Skills & Honesty and more.</p>
+                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour. People sense and understand themselves better after a talk with Alisa. She loves to speak about subjects like Community Management, Honesty, Vulnerability, Emotional Intelligence, Mindfulness, Body Awareness, Art of Choice, Saying No, Mother-Daughter relationships, Crisis Management, Conflict Resolution & overall Soft Skills for life and organisational culture.</p>
             </div>
             <div>
-                <p class="maintext_narrow">She invests a lot of time into her Start-Up: organising innovative educational spaces for mothers and children.</p>
+                <p class="maintext_narrow">She invests a lot of time into her Start-Up: organising innovative educational spaces.</p>
             </div>
-            <p class="maintext">Connect & book a private BRAINSTORMING SESSION or a CREATIVE MASTERMIND if you seek fresh direction & inspiration.</p>
+            <p class="maintext">Connect & book a private BRAINSTORMING session or a creative MASTERMIND for fresh direction & inspiration, need new ideas and visions.</p>
             <div class="maintext_comment">
             <div class="maintext_comment">
             <div style="padding: 2px 30px 7px;">
