--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides educational guidance to enterpreneurs & families seeking calm, joy, inspiration, clarity and motivation to rebuild trust.</p>
+            <p class="maintext">provides guidance to enterpreneurs & families seeking calm, inspiration, clarity and wisdom to rebuild trust.</p>
             <div class="maintext_comment">
                 <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Provides structure. Helps with presentation and exam anxiety.</p>
                 <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour. She loves to speak about subjects like Community Management, Honesty, Vulnerability, Emotional Intelligence, Mindfulness, Art of Choice, Saying No, Mother-Daughter relationships, Crisis Management & Conflict Resolution.</p>
