--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             <p class="maintext">provides guidance to enterpreneurs & families seeking calm, inspiration, clarity and wisdom to rebuild trust.</p>
             <div class="maintext_comment">
                 <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Provides structure. Helps with presentation and exam anxiety.</p>
-                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour. Alisa speaks and writes about Emotional Intelligence, Mindfulness, Art of Choice, Saying No, Mother-Daughter relationships, Crisis Management & Conflict Resolution.</p>
+                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour. Alisa is a Community Manager who speaks and writes about Emotional Intelligence, Mindfulness, Art of Choice, Saying No, Mother-Daughter relationships, Crisis Management & Conflict Resolution.</p>
             </div>
             <div>
                 <p class="maintext_narrow">She invests a lot of time into her Start-Up: organising innovative educational spaces.</p>
             </div>
-            <p class="maintext">Connect & book a private BRAINSTORMING session or a creative MASTERMIND for fresh direction & inspiration, especially if you or your family/team needs new ideas and visions.</p>
+            <p class="maintext">Connect & book a private BRAINSTORMING session or a creative MASTERMIND for fresh direction & inspiration, especially if you or your family/team need new ideas and visions.</p>
             <div class="maintext_comment">
             <div class="maintext_comment">
             <div style="padding: 2px 30px 7px;">
