--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour. Alisa is a Community Manager who speaks and writes about Creativity, Mindfulness, Art of Choice & the satisfaction of Saying a No, Honesty, Creative Conflict Resolution & Crisis Management.</p>
             </div>
             <div>
-                <p class="maintext_narrow">She invests a lot of time into her Start-Up: organising innovative educational spaces.</p>
+                <p class="maintext_narrow">She develops a StartUp — innovative educational spaces and is open for teaming up with like-minded individuals.</p>
             </div>
             <p class="maintext">Connect & book a private BRAINSTORMING session or a creative MASTERMIND for fresh direction & inspiration, especially if you or your family/team need new ideas and visions.</p>
             <div class="maintext_comment">
