--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour. Alisa is a Community Manager who speaks and writes about Creativity, Mindfulness, Art of Choice & the satisfaction of Saying a No, Honesty, Creative Conflict Resolution & Crisis Management.</p>
             </div>
             <div>
-                <p class="maintext_narrow">She has worked in the University of Vienna within math department as a sounding board producer as well as a teacher in several private schools around the world. Now she consults parents, business owners, teachers, children & teens as well as develops her start-up, organising innovative educational spaces.</p>
+                <p class="maintext_narrow">She has worked in the University of Vienna within math department as a sounding board producer. Previously she has opened an Art Therapy studio and worked as an educator in several private schools around Europe. She now consults parents, business owners, teachers, children & teens on soft skills and develops her start-up with a mission to organise holistic & innovative educational spaces that help individuals follow their natural talents and interests.</p>
             </div>
             <p class="maintext">Connect & book a private BRAINSTORMING session or a creative MASTERMIND for fresh direction & inspiration, especially if you or your family/team need new ideas and visions.</p>
             <div class="maintext_comment">
