--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides guidance to enterpreneurs & families seeking calm, inspiration, clarity and wisdom to rebuild trust.</p>
+            <p class="maintext">provides guidance to enterpreneurs & families seeking calm, clarity and wisdom to rebuild trust.</p>
             <div class="maintext_comment">
-                <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Provides structure. Helps with presentation and exam anxiety.</p>
-                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour. Alisa is a Community Manager who speaks and writes about Creativity, Mindfulness, Art of Choice & the satisfaction of Saying a No, Honesty, Creative Conflict Resolution & Crisis Management.</p>
+                <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Provides structure.</p>
+                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour, speak and write about Sensitivity, Mindfulness, Art of Choice & the satisfaction of Saying a No, Conflict Resolution & Crisis Management.</p>
             </div>
             <div>
-                <p class="maintext_narrow">She has worked in the University of Vienna within math department as a sounding board producer. Previously she has opened an Art Therapy studio and worked as an educator in several private schools around Europe. She now consults parents, business owners, teachers, children & teens on soft skills and develops her start-up with a mission to organise holistic & innovative educational spaces that help individuals follow their natural talents and interests.</p>
+                <p class="maintext_narrow">She has worked in the University of Vienna within math department as a sounding board producer in 2022. Previously, opened an Art-Therapy studio and having worked as an educator in several private schools around Europe, she now dedicates time to consulting business owners, teachers, parents, teens & children on The ABC's of soft skills. She also develops her start-up, following a calling & a mission "organising holistic innovative educational spaces for individuals to follow their interests & naturally develop talents.</p>
             </div>
-            <p class="maintext">Connect & book a private BRAINSTORMING session or a creative MASTERMIND for fresh direction & inspiration, especially if you or your family/team need new ideas and visions.</p>
+            <p class="maintext">Connect & book a BRAINSTORMING session or a STRATEGIC MASTERMIND for fresh direction & inspiration, especially if you or your family and team need unexpected fresh ideas & visions.</p>
             <div class="maintext_comment">
             <div class="maintext_comment">
             <div style="padding: 2px 30px 7px;">
